--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
             </div>
 
         </div>
+
+        <footer id="footer">
+            <a class="upTop" href="#header">Back to top</a>
+        </footer>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
